[ALL] Read bytes as they are from resources